# futr

./: .ghcid  .gitignore  Dockerfile  LICENSE  README.md  Setup.hs  appveyor.yml  build-appimage.sh  build-flatpak.sh  cabal.project  cabal.project.unix  cabal.project.windows  createDiff.sh  devbuild.sh  entrypoint.sh  flake.nix  futr.cabal  hanostr.cabal  package.yaml  stack.yaml  update-version.sh
.github/: ci.yml
.github/docs/: Setup.md
.github/workflows/: ci.yml  continous.yml  continuous.yml  flatpak-repo.yml  linux-continuous.yml  linux-release.yml  linux-tests.yml  publish.yml  release.yml  tests.yml  windows-continuous.yml  windows-release.yml  windows-tests.yml
app/: Main.hs
docs/: Setup-Linux.md  Setup-Windows.md  Setup.md  Version-Management.md
flatpak/: .gitignore  com.futrnostr.futr.appdata.xml  com.futrnostr.futr.appdata.xml.template  com.futrnostr.futr.yml  com.futrnostr.futr.yml.template  futr-continuous.flatpakrepo  futr-continuous.flatpakrepo.template  futr-stable.flatpakrepo  futr-stable.flatpakrepo.template  futr.desktop  index.html
futr.AppDir/: AppRun  futr.desktop
nix/cdparanoia-patch/: configure.patch  fix_private_keyword.patch  utils.patch
platform/windows/: .gitignore  README.md  copy-dlls.sh  copy-dlls.sh.template  fix-cabal-ucrt64-appveyor.sh  fix-cabal-ucrt64.sh  fix-ghc-local.sh  fix-ghc-mingw64.sh  fix-pkgconfig-appveyor.sh  fix-pkgconfig.sh  futr.rc  futr.rc.template  innosetup.iss  innosetup.iss.template
resources/qml/: main.qml  qmlmodules  qtquickcontrols2.conf
resources/qml/content/: AccountList.ui.qml  AccountScreen.ui.qml  App.qml  CMakeLists.txt  Chat.ui.qml  DMRelays.ui.qml  ErrorScreen.ui.qml  FollowList.ui.qml  FollowListFilter.ui.qml  HomeScreen.ui.qml  KeyMgmtScreen.ui.qml  KeysGeneratedScreen.ui.qml  MainContent.ui.qml  RelaysScreen.ui.qml  TopBar.ui.qml  WelcomeScreen.ui.qml  qmldir
resources/qml/content/Buttons/: BackButton.ui.qml  CloseButton.ui.qml  EditButton.ui.qml  qmldir
resources/qml/content/Components/: AlertManager.ui.qml  Chat.ui.qml  DMRelays.ui.qml  FullscreenVideoWindow.ui.qml  ImageViewer.ui.qml  InboxModelStatusAlert.ui.qml  MessageInput.ui.qml  NavigationPane.ui.qml  NostrImage.qml  NostrProfileAvatar.qml  NostrProfileBanner.qml  NotificationToast.ui.qml  PersonalFeed.ui.qml  PostContent.ui.qml  PostDetails.ui.qml  PostImage.ui.qml  PostVideo.ui.qml  ProfileBanner.qml  ProfilePicture.qml  ProfilePicture.ui.qml  PublishAlert.ui.qml  ReferencedPost.ui.qml  RelayStatusIcon.ui.qml  RepostMenu.ui.qml  ScrollingListView.ui.qml  VideoPlayer.ui.qml  qmldir
resources/qml/content/Components/PostContent/: DummyComponent.ui.qml  PostImage.ui.qml  PostVideo.ui.qml  ReferencedPost.ui.qml  TextComponent.ui.qml
resources/qml/content/Dialogs/: ConnectingModal.ui.qml  EventJSONDialog.ui.qml  ImportAccountDialog.ui.qml  ImportSuccessDialog.ui.qml  KeysGeneratedDialog.ui.qml  LoginErrorDialog.ui.qml  PostDialog.ui.qml  RelayMgmtDialog.ui.qml  RemoveAccountDialog.ui.qml  RemoveRelayDialog.ui.qml  SeenOnRelaysDialog.ui.qml  ShowKeysDialog.ui.qml  qmldir
resources/qml/content/Profile/: EditMyProfile.ui.qml  EditProfile.ui.qml  ExternalIdentity.ui.qml  MyProfile.ui.qml  Profile.ui.qml  ProfilePicture.ui.qml  qmldir
resources/qml/imports/: CMakeLists.txt
resources/qml/imports/Futr/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  ExternalIdentityIcons.qml  Util.qml  qmldir
resources/qml/imports/Futr/designer/: plugin.metainfo
src/: AppState.hs  AppTypes.hs  DebugJSON.hs  Downloader.hs  EffectfulQML.hs  Futr.hs  Helpers.hs  KeyMgmt.hs  Logging.hs  Main.hs  Nostr.hs  NostrFunctions.hs  NostrTypes.hs  QtQuick.hs  RelayMgmt.hs  TimeFormatter.hs  Types.hs  UI.hs  UIHelpers.hs  Version.hs
src/Nostr/: Bech32.hs  Encryption.hs  Event.hs  EventHandler.hs  EventProcessor.hs  EventStore.hs  FeedKeys.hs  Filter.hs  FilterSet.hs  GiftWrap.hs  InboxModel.hs  Keys.hs  Kind.hs  Nip05Search.hs  Nip05Verifier.hs  Profile.hs  ProfileManager.hs  Publisher.hs  Relay.hs  RelayConnection.hs  RelayPool.hs  Request.hs  Response.hs  Subscription.hs  SubscriptionHandler.hs  Types.hs  Util.hs  WebSocket.hs
src/Nostr/Effects/: CurrentTime.hs  Dispatcher.hs  IDGen.hs  Logging.hs  RelayPool.hs  ResponseProcessor.hs  Subscription.hs  WebSocket.hs
src/Nostr/Encryption/: Internal.hs
src/Presentation/: Accounts.hs  Classes.hs  HomeScreen.hs  KeyMgmt.hs  KeyMgmtUI.hs  RelayMgmt.hs  RelayMgmtUI.hs  Welcome.hs  WelcomeScreen.hs
src/Store/: Event.hs  LMDB.hs  Lmdb.hs  Profile.hs
src/Widgets/: BackupKeys.hs  EditProfile.hs  Home.hs  KeyManagement.hs  PostDetails.hs  Profile.hs  ProfileImage.hs  RelayManagement.hs  Setup.hs  ViewPosts.hs  ViewProfile.hs
test/: TestMain.hs
test/Nostr/: EncryptionTest.hs  Nip05SearchTest.hs
