cabal-version:      3.12
name:               futr
version:            0.1.0.0
license:            LGPL-3.0-only
license-file:       LICENSE
copyright:          2024 Sascha-Oliver Prolic
maintainer:         saschaprolic@googlemail.com
author:             Sascha-Oliver Prolic
tested-with:        ghc ==9.4.8
homepage:           https://github.com/futrnostr/futr#readme
synopsis:           nostr client application
description:        A nostr client application written in Haskell and Qt5.
category:           application
build-type:         Custom
extra-source-files: README.md

custom-setup
  setup-depends:
    base >=4.17.2.1 && <4.18,
    Cabal >= 3.12 && < 4,
    directory >= 1.3.7.1 && < 1.4,
    filepath >= 1.4.2 && <1.5,
    process >= 1.6.18.0 && <1.7,
    time >= 1.12.2 && < 1.13

executable futr
    main-is:          Main.hs
    hs-source-dirs:   src

    other-modules:
        Nostr.Keys
        Nostr.Kind
        Nostr.Profile
        Nostr.Relay
        Presentation.WelcomeScreen
        Types
        Paths_futr

    autogen-modules:  Paths_futr
    default-language: Haskell2010
    extra-libraries:  secp256k1
    extra-lib-dirs:   /usr/local/lib
    ghc-options:
        -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    build-depends:
        aeson >=2.2.3.0 && <2.3,
        base >=4.17.2.1 && <4.18,
        base16-bytestring >=1.0.2.0 && <1.1,
        basement >=0.0.16 && <0.1,
        bech32 >=1.1.7 && <1.2,
        binary >=0.8.9.1 && <0.9,
        bytestring >=0.11.5.3 && <0.12,
        containers >=0.6.7 && <0.7,
        cryptohash-sha256 >=0.11.102.1 && <0.12,
        data-default >=0.7.1.1 && <0.8,
        directory >=1.3.7.1 && <1.4,
        entropy >=0.4.1.10 && <0.5,
        haskoin-core >=1.1.0 && <1.2,
        hsqml >=0.3.6.0 && <0.4,
        lens >=5.3.2 && <5.4,
        libsecp256k1 >=0.2.1 && <0.3,
        modern-uri >=0.3.6.1 && <0.4,
        random >=1.2.1.2 && <1.3,
        secp256k1-haskell >=1.2.0 && <1.3,
        stm >=2.5.1.0 && <2.6,
        text >=2.0.2 && <2.1,
        time >=1.12.2 && <1.13,
        vector >=0.13.1.0 && <0.14

source-repository head
  type: git
  location: https://github.com/futrnostr/futr/
  branch: master
