cabal-version:      2.4
name:               futr
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
copyright:          2024 Sascha-Oliver Prolic
maintainer:         saschaprolic@googlemail.com
author:             Sascha-Oliver Prolic
tested-with:        ghc == 9.6.6
homepage:           https://github.com/futrnostr/futr#readme
synopsis:           nostr client application
description:        A nostr client application written in Haskell and Qt5.
category:           application
build-type:         Custom
extra-source-files: README.md build.touch

custom-setup
  setup-depends:
    base >=4.18.2.1 && <4.19,
    Cabal >= 3.12 && < 4,
    directory >= 1.3.7.1 && < 1.4,
    filepath >= 1.4.2 && <1.5,
    process >= 1.6.18.0 && <1.7,
    time >= 1.12.2 && < 1.13,
    unix >= 2.7.3 && < 2.8

executable futr
    main-is:          Main.hs
    hs-source-dirs:   src

    other-modules:
        AppState
        EffectfulQML
        Futr
        Nostr.Effects.IDGen
        Nostr.Effects.Logging
        Nostr.Effects.RelayPool
        Nostr.Effects.WebSocket
        Nostr.Encryption
        Nostr.Encryption.Internal
        Nostr.Event
        Nostr.Keys
        Nostr.Profile
        Nostr.Relay
        Nostr.Types
        Presentation.KeyMgmt
        TimeFormatter

    default-language: Haskell2010
    extra-libraries:  secp256k1
    extra-lib-dirs:   /usr/local/lib
    ghc-options:
        -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates
    default-extensions: ConstraintKinds,
                        DataKinds,
                        FlexibleContexts,
                        GADTs,
                        ImportQualifiedPost,
                        KindSignatures,
                        LambdaCase,
                        OverloadedStrings,
                        RankNTypes,
                        ScopedTypeVariables,
                        TemplateHaskell,
                        TypeApplications,
                        TypeFamilies,
                        TypeOperators
    build-depends:
        aeson >=2.2.3.0 && <2.3,
        async >=2.2.5 && <2.3,
        base >=4.18.2.1 && <4.19,
        base16-bytestring >=1.0.2.0 && <1.1,
        base64-bytestring >=1.2.1.0 && <1.3,
        basement >=0.0.16 && <0.1,
        bech32 >=1.1.7 && <1.2,
        binary >=0.8.9.1 && <0.9,
        bytestring >=0.11.5.3 && <0.12,
        byteable >=0.1.1 && < 0.2,
        containers >=0.6.7 && <0.7,
        cryptohash-sha256 >=0.11.102.1 && <0.12,
        crypton >=1.0 && <1.1,
        data-default >=0.7.1.1 && <0.8,
        directory >=1.3.7.1 && <1.4,
        effectful >=2.3.1.0 && <2.4,
        effectful-core >=2.3.1.0 && <2.4,
        effectful-th >=1.0.0.2 && <1.1,
        entropy >=0.4.1.10 && <0.5,
        filepath >= 1.4.2 && <1.5,
        haskoin-core >=1.1.0 && <1.2,
        hsqml >=0.3.6.0 && <0.4,
        lens >=5.3.2 && <5.4,
        libsecp256k1 >=0.2.1 && <0.3,
        memory >=0.18 && <0.19,
        modern-uri >=0.3.6.1 && <0.4,
        random >=1.2.1.2 && <1.3,
        secp256k1-haskell >=1.4.0 && <1.5,
        stm >=2.5.1.0 && <2.6,
        string-conversions >=0.4.0.1 && <0.5,
        tagged >=0.8.8 && <0.9,
        text >=2.0.2 && <2.1,
        time >=1.12.2 && <1.13,
        vector >=0.13.1.0 && <0.14,
        websockets >=0.13.0.0 && <0.14,
        wreq >=0.5.4.3 && <0.6,
        wuss >=2.0.2.0 && <2.1

test-suite futr-tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       test, src
    main-is:              TestMain.hs

    other-modules:
        Nostr.Encryption
        Nostr.Encryption.Internal
        Nostr.EncryptionTest
        Nostr.Keys

    ghc-options:
        -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    build-depends:
        aeson >=2.2.3.0 && <2.3,
        base >=4.18.2.1 && <4.19,
        base16-bytestring >=1.0.2.0 && <1.1,
        base64-bytestring,
        bech32 >=1.1.7 && <1.2,
        binary >=0.8.9.1 && <0.9,
        bytestring >=0.11.5.3 && <0.12,
        crypton >=1.0 && <1.1,
        directory >=1.3.7.1 && <1.4,
        entropy >=0.4.1.10 && <0.5,
        haskoin-core >=1.1.0 && <1.2,
        libsecp256k1 >=0.2.1 && <0.3,
        memory >=0.18 && <0.19,
        secp256k1-haskell >=1.4.0 && <1.5,
        tasty >=1.4.3 && <1.5,
        tasty-hunit >=0.10.2 && <0.11,
        text >=2.0.2 && <2.1,
        random >=1.2.1.2 && <1.3

    extra-libraries:  secp256k1
    extra-lib-dirs:   /usr/local/lib
    default-language:     Haskell2010

source-repository head
  type: git
  location: https://github.com/futrnostr/futr/
  branch: master
