cabal-version:      2.4
name:               futr
version:            0.3.0.1
license:            GPL-3.0-only
license-file:       LICENSE
copyright:          2025 Sascha-Oliver Prolić
maintainer:         saschaprolic@googlemail.com
author:             Sascha-Oliver Prolic
tested-with:        ghc == 9.6.7
homepage:           https://github.com/futrnostr/futr#readme
synopsis:           nostr client application
description:        A nostr client application written in Haskell and Qt5.
category:           application
build-type:         Custom
extra-source-files: README.md build.touch

custom-setup
  setup-depends:
    base >=4.18.2.1 && <4.19,
    bytestring >=0.11.5.3 && <0.12,
    Cabal >= 3.10 && < 4,
    directory >= 1.3.7.1 && < 1.4,
    filepath >= 1.4.2 && <1.5,
    process >= 1.6.18.0 && <1.7,
    time >= 1.12.2 && < 1.13

executable futr
    main-is:          Main.hs
    hs-source-dirs:   app, src

    other-modules:
        Downloader
        QtQuick
        Futr
        KeyMgmt
        Logging
        Nostr
        Nostr.Bech32
        Nostr.Encryption
        Nostr.Encryption.Internal
        Nostr.Event
        Nostr.EventHandler
        Nostr.InboxModel
        Nostr.Keys
        Nostr.Nip05Search
        Nostr.Profile
        Nostr.ProfileManager
        Nostr.Publisher
        Nostr.Relay
        Nostr.RelayConnection
        Nostr.Subscription
        Nostr.SubscriptionHandler
        Nostr.Types
        Nostr.Util
        Presentation.Classes
        Presentation.HomeScreen
        Presentation.KeyMgmtUI
        Presentation.RelayMgmtUI
        RelayMgmt
        Store.Lmdb
        Types
        TimeFormatter
        Version

    default-language: GHC2021
    extra-libraries:  secp256k1, lmdb
    extra-lib-dirs:   /usr/local/lib
    ghc-options:
        -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates
    default-extensions: DataKinds,
                        GADTs,
                        ImportQualifiedPost,
                        LambdaCase,
                        OverloadedStrings,
                        TypeFamilies
    build-depends:
        aeson >=2.2.3.0 && <2.3,
        aeson-pretty >=0.8.10 && <0.9,
        async >=2.2.5 && <2.3,
        base >=4.18.2.1 && <4.19,
        base16-bytestring >=1.0.2.0 && <1.1,
        base64-bytestring >=1.2.1.0 && <1.3,
        basement >=0.0.16 && <0.1,
        bech32 >=1.1.7 && <1.2,
        binary >=0.8.9.1 && <0.9,
        bytestring >=0.11.5.3 && <0.12,
        byteable >=0.1.1 && < 0.2,
        Cabal-syntax,
        case-insensitive >=1.2.1.0 && <1.3,
        containers >=0.6.7 && <0.7,
        cryptohash-sha256 >=0.11.102.1 && <0.12,
        crypton >=1.0 && <1.1,
        data-default >=0.7.1.1 && <0.8,
        directory >=1.3.7.1 && <1.4,
        disk-free-space >=0.1.0.1 && <0.2,
        effectful >=2.5.1.0 && <2.6,
        effectful-core >=2.5.1.0 && <2.6,
        entropy >=0.4.1.10 && <0.5,
        filepath >= 1.4.2 && <1.5,
        haskoin-core,
        hsqml >=0.3.6.0 && <0.4,
        http-date >= 0.0.11 && <0.1,
        lens >=5.3.2 && <5.4,
        libsecp256k1 >=0.3.1 && <0.4,
        lmdb >= 0.2.5 && < 0.3,
        lmdb-high-level >= 0.1 && <0.2,
        lrucache >= 1.2.0.1 && <1.3,
        memory >= 0.18 && <0.19,
        network >= 3.2.4.0 && <3.3,
        network-uri >=2.6.4.2 && <2.7,
        pipes >=4.3.16 && <4.4,
        random >=1.2.1.2 && <1.3,
        random-shuffle >=0.0.4 && <0.1,
        regex-tdfa >=1.3.2.2 && <1.4,
        scientific >=0.3.8.0 && <0.4,
        split >=0.2.3.5 && <0.3,
        stm >=2.5.1.0 && <2.6,
        string-conversions >=0.4.0.1 && <0.5,
        tagged >=0.8.8 && <0.9,
        text >=2.0.2 && <2.1,
        time >=1.12.2 && <1.13,
        vector >=0.13.1.0 && <0.14,
        websockets >=0.13.0.0 && <0.14,
        wreq >=0.5.4.3 && <0.6,
        wuss >=2.0.2.0 && <2.1
    if os(windows)
        build-depends:
            Win32 >=2.13.3 && <2.14

test-suite futr-tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       test, src
    main-is:              TestMain.hs

    other-modules:
        Nostr.Encryption
        Nostr.Encryption.Internal
        Nostr.EncryptionTest
        Nostr.Keys
        Nostr.Nip05Search
        Nostr.Nip05SearchTest

    ghc-options:
        -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    default-extensions: OverloadedStrings,
                        ImportQualifiedPost

    build-depends:
        aeson >=2.2.3.0 && <2.3,
        base >=4.18.2.1 && <4.19,
        base16-bytestring >=1.0.2.0 && <1.1,
        base64-bytestring,
        bech32 >=1.1.7 && <1.2,
        binary >=0.8.9.1 && <0.9,
        bytestring >=0.11.5.3 && <0.12,
        crypton >=1.0 && <1.1,
        directory >=1.3.7.1 && <1.4,
        entropy >=0.4.1.10 && <0.5,
        haskoin-core,
        lens >=5.3.2 && <5.4,
        libsecp256k1 >=0.3.1 && <0.4,
        memory >=0.18 && <0.19,
        network-uri >=2.6.4.2 && <2.7,
        tasty >=1.4.3 && <1.5,
        tasty-hunit >=0.10.2 && <0.11,
        text >=2.0.2 && <2.1,
        random >=1.2.1.2 && <1.3,
        wreq >=0.5.4.3 && <0.6

    extra-libraries:  secp256k1
    extra-lib-dirs:   /usr/local/lib
    default-language:     GHC2021

source-repository head
  type: git
  location: https://github.com/futrnostr/futr/
  branch: master
